[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Aram Ebtekar <aramebtech@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = { version = "1", features = ["derive"]}
sqlx = { version = "0.4.2", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
actix-web = "4.0.0-beta.1"
actix-rt = "2.0.0-beta.1"
config = "0.10.1"
#actix-web = "3.1.0"
#actix-rt = "1.1.1"

[dev-dependencies]
reqwest = "0.11"
tokio = "1.0.1"
#tokio = "0.2.22"
