[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Aram Ebtekar <aramebtech@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.5.1", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.11.0"
actix-web = "4.0.0-beta.4"
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
rand = { version = "0.8.3", features=["std_rng"] }
reqwest = { version = "0.11.2", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.25"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.17", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.0"
tracing-log = "0.1.2"
tracing-actix-web = "0.3.0-beta.3"
serde-aux = "2.1"
unicode-segmentation = "1.7"
validator = "0.12.0"

[dev-dependencies]
actix-rt = "2.1"
claim = "0.5.0"
#fake = "2.4.0"
fake = "~2.3.0"
lazy_static = "1.4"
linkify = "0.5.0"
#quickcheck = "1.0.3"
quickcheck = "0.9.2"
quickcheck_macros = "1.0"
serde_json = "1.0"
tokio = { version = "1.4", features = ["macros"] }
wiremock = "0.5.2"
