[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Aram Ebtekar <aramebtech@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
sqlx = { version = "0.5.9", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
config = "0.11.0"
#actix-http = "=3.0.0-beta.8"
#actix-service = "=2.0"
actix-web = "=4.0.0-beta.19"
tokio = { version = "1.15", features = ["macros"] }
uuid = { version = "0.8.2", features = ["v4"] }
chrono = "0.4.19"
rand = { version = "0.8.4", features=["std_rng"] }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1.29"
#tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.6", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.2"
tracing-log = "0.1.2"
tracing-actix-web = "=0.5.0-beta.9"
serde-aux = "3.0"
unicode-segmentation = "1.8"
validator = "0.14.0"
thiserror = "1.0"
anyhow = "1.0"
base64 = "0.13"
secrecy = "0.8"
argon2 = { version = "0.3.2", features = ["std"] }

[dev-dependencies]
claim = "0.5.0"
#fake = "2.4"
fake = "~2.3"
once_cell = "1.9"
linkify = "0.8.0"
#quickcheck = "1.0"
quickcheck = "0.9.2"
quickcheck_macros = "1.0"
serde_json = "1.0"
wiremock = "0.5.10"
